--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@mantine/core": "^7.15.3",
+    "@mantine/dates": "^7.15.3",
+    "@mantine/hooks": "^7.15.3",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^7.23.3",
@@ -22,6 +26,9 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.1.0",
+    "jwt-decode": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.1",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-date-range": "^2.0.1",
@@ -32,9 +39,11 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-simple-captcha": "^9.3.1",
     "react-swiper": "^0.1.5",
     "react-tabs": "^6.1.0",
     "react-time-picker": "^7.0.0",
+    "react-toastify": "^11.0.2",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.0"
   },
